# multisql

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  SECURITY.md  dprint.json  multisql.sublime-project  rustfmt.toml
.github/workflows/: rust-clippy.yml  rust.yml
benches/: README.md  bench.rs  filter.rs  index.md  sled_benchmark.rs
benches/criterion/filter/report/: index.html
benches/criterion/find/report/: index.html
benches/criterion/join/report/: index.html
benches/criterion/report/: index.html
benches/criterion/sum_group/report/: index.html
book/: book.toml
examples/: api_usage.rs  hello_world.rs  sled_multi_threaded.rs  using_config.rs
src/: lib.rs  parse_sql.rs  result.rs
src/data/: column.rs  index.rs  join.rs  mod.rs  row.rs  schema.rs  table.rs
src/data/recipe/: mod.rs  new.rs  planned.rs  resolve.rs
src/data/recipe/from/: method.rs  mod.rs
src/data/value/: big_endian.rs  cast.rs  convert.rs  declare.rs  error.rs  literal.rs  mod.rs  serde_convert.rs
src/data/value/methods/: aggregate.rs  binary.rs  function.rs  mod.rs  timestamp.rs  unary.rs  utility.rs
src/data/value/value_type/: cast.rs  mod.rs
src/database/: auto_increment.rs  base.rs  mod.rs  mutable.rs
src/databases/: mod.rs
src/databases/csv/: auto_increment.rs  base.rs  discern.rs  mod.rs  mutable.rs  record.rs  utils.rs
src/databases/memory/: auto_increment.rs  base.rs  mod.rs  mutable.rs
src/databases/odbc/: auto_increment.rs  base.rs  column_set.rs  mod.rs  mutable.rs
src/databases/sheet/: auto_increment.rs  base.rs  mod.rs  mutable.rs
src/databases/sled/: auto_increment.rs  base.rs  error.rs  mod.rs  mutable.rs  util.rs
src/executor/: execute.rs  fetch.rs  filter.rs  manual.rs  mod.rs  procedure.rs  recipe.rs  select.rs  select_new.rs  set_variable.rs  types.rs  update.rs
src/executor/alter_row/: auto_increment.rs  delete.rs  insert.rs  mod.rs  update.rs  validate.rs  validate_unique.rs
src/executor/alter_table/: alter_table.rs  create_index.rs  create_table.rs  drop.rs  error.rs  mod.rs  truncate.rs  validate.rs
src/executor/create/: error.rs  index.rs  mod.rs  table.rs  view.rs
src/executor/evaluate/: mod.rs
src/executor/insert/: mod.rs  validate.rs
src/executor/other/: explain.rs  mod.rs
src/executor/query/: get_columns.rs  get_data.rs  get_rows.rs  mod.rs  set_expr.rs
src/executor/query/select/: mod.rs  order.rs
src/executor/recipe/: find.rs  from.rs  macro_components.rs  manual.rs  method.rs  mod.rs  new.rs  planned.rs  resolve.rs
src/executor/recipe/manual/: join.rs  mod.rs
src/executor/select/: columns.rs  join.rs  mod.rs  rows.rs
src/glue/: database.rs  error.rs  insert.rs  mod.rs  payload.rs  select.rs  tempdb.rs
src/glue/value/: mod.rs
src/storages/: mod.rs
src/storages/csv_storage/: auto_increment.rs  mod.rs  store.rs  store_mut.rs  utils.rs
src/storages/memory/: alter_table.rs  auto_increment.rs  mod.rs  store.rs  store_mut.rs
src/storages/sheet_storage/: alter_table.rs  auto_increment.rs  mod.rs  store.rs  store_mut.rs
src/storages/sled_storage/: alter_table.rs  auto_increment.rs  error.rs  mod.rs  store.rs  store_mut.rs  util.rs
src/store/: alter_table.rs  auto_increment.rs  mod.rs  store.rs  store_mut.rs
src/tests/: aggregate.rs  alter_table.rs  arithmetic.rs  basic.rs  blend.rs  create_table.rs  default.rs  drop_table.rs  error.rs  filter.rs  insert.rs  join.rs  migrate.rs  mod.rs  nested_select.rs  nullable.rs  ordering.rs  sql_types.rs  synthesize.rs  tester.rs
src/tests/column_options/: auto_increment.rs
src/tests/function/: cast.rs  convert.rs  left_right.rs  mod.rs  upper_lower.rs
src/tests/validate/: types.rs  unique.rs
src/utils/: macros.rs  mod.rs  plane.rs
tests/: api_main.rs  csv_storage.rs  databases_main.rs  functionality_main.rs  misc_main.rs  mod.rs  query_main.rs  sled_storage.rs  util_macros.rs
tests/ability/: mod.rs
tests/ability/alter/: mod.rs
tests/ability/alter/database/: create_database.rs  mod.rs
tests/ability/alter/table/: alter_table.rs  create_table.rs  drop_table.rs  mod.rs
tests/ability/alter/view/: create_view.rs  mod.rs
tests/ability/base/: basic.rs  generic_complex.rs  mod.rs
tests/ability/base/aggregate/: general.rs  mod.rs  old.rs
tests/ability/base/filter/: arithmetic.rs  filter_simple.rs  gt_lt.rs  mod.rs
tests/ability/base/join/: join_basic.rs  mod.rs
tests/ability/column_option/: auto_increment.rs  default.rs  mod.rs  types.rs  unique.rs
tests/ability/index/: create.rs  create_table.rs  mod.rs
tests/ability/index/filter/: general.rs  gt_lt.rs  mod.rs
tests/ability/insert/: basic_insert.rs  mod.rs
tests/abstract/: cast.rs  error.rs  mod.rs
tests/api/: api_insert.rs  cast_any.rs  csv.rs  insert.rs  mod.rs  select.rs
tests/databases/: csv.rs  memory.rs  mod.rs  sheet.rs  sled.rs
tests/functionality/: default.rs  mod.rs
tests/functionality/api/: cast_any.rs  mod.rs
tests/functionality/column_options/: auto_increment.rs  mod.rs
tests/functionality/query/: aggregate.rs  aggregate_old.rs  generic_complex.rs  join.rs  mod.rs  with.rs
tests/functionality/query/filter/: arithmetic.rs  filter_simple.rs  gt_lt.rs  indexed.rs  indexed_gt_lt.rs  mod.rs
tests/functionality/query/function/: case.rs  convert.rs  convert_timestamp.rs  func_cast.rs  func_other.rs  func_timestamp.rs  left_right.rs  misc_func_cast.rs  mod.rs  upper_lower.rs
tests/functionality/query/with/: mod.rs
tests/functionality/statement/: alter.rs  drop.rs  explain.rs  insert.rs  mod.rs  select.rs  set.rs  simple_insert.rs  truncate.rs
tests/functionality/statement/create/: database.rs  (+3 more)
tests/functionality/validation/: mod.rs  types.rs  unique.rs
tests/misc/: cast.rs  error.rs  mod.rs
tests/original/: basic.rs  mod.rs
tests/query/: explain.rs  mod.rs  with.rs
tests/query/function/: case.rs  convert.rs  convert_timestamp.rs  func_cast.rs  func_other.rs  func_timestamp.rs  left_right.rs  misc_func_cast.rs  mod.rs  upper_lower.rs
tests/storages/: csv.rs  memory.rs  mod.rs  sheet.rs  sled.rs
tests/util/: mod.rs
tests/util_macros/: mod.rs
(+96 files in other folders)
