[package]
	name = "multisql"
	version = "0.0.0"
	authors = ["Kyran Gostelow <kyran@gostelow.me>", "Taehoon Moon <taehoon.moon@outlook.com>"]
	edition = "2021"
	description = "MultiSQL"
	license = "Apache-2.0"
	repository = "https://github.com/SyRis-Consulting/multisql"
	readme = "README.md"
	keywords = ["sql-database", "sql"]
	metadata.docs.rs.all-features = true

[features]
	default = [
		# Storages
		"sled-storage",
		"csv-storage",
		# Performance
		"multithreading",# TODO: Multithreading optional (Remove uses without CFG)
		# Functionality
		"alter-table",
		"auto-increment",
		# Data
		"implicit_float_conversion",
		# API
		"expanded-api",
	]

	# Storages
		sled-storage = ["sled", "bincode"]
		csv-storage = ["csv", "linecount"]

	# Performance
		multithreading = ["rayon"]

	# Functionality
		alter-table = []
		auto-increment = []

	# Data
		double_quote_strings = []
		implicit_float_conversion = []

	# API
		expanded-api = ["serde_json"]


[dependencies]
	async-trait = "0.1.41"
	async-recursion = "0.3.1"
	boolinator = "2.4.0"
	futures = "0.3"
	indexmap = "1.6.0"
	im-rc = "15.0.0"
	iter-enum = "0.2.4"
	itertools = "0.9.0"
	pin-project = "1.0.1"
	serde = { version = "1.0.117", features = ["derive"] }
	sqlparser = { version = "0.15.0", features = ["serde"] }
	thiserror = "1.0.21"
	fstrings = "0.2.3"
	regex = "1"
	chrono = { version = "0.4.19", features = ["serde", "unstable-locales"] }
	concat-idents = "1.1.2"
	thousands = "0.2.0"
	fast-float = "0.2.0" # Unclear if these make any real difference
	lexical = "6.1.0"
	fastrand = "1.7.0"

	# OPTIONAL DEPENDENCIES
		# Multiple
			# Sled and Expanded API
				serde_json = { version = "1.0.0", optional = true }

		# Storages
			# Sled
				bincode = { version = "1.3.1", optional = true }
				sled = { version = "0.34.7", optional = true }

			# CSV
				csv = { version = "1.1.6", optional = true }
				linecount = { version = "0.1.0", optional = true }

		# Performance
			# Multithreading
				rayon = { version = "1.5.1", optional = true }

		# Functionality

		# Data

		# API

[dev-dependencies]
	tokio = { version = "0.3.3", features = ["macros", "rt"] }
	criterion = {version = "0.3.5", features = ["html_reports"] }

[[bench]]
	name = "filter"
	harness = false
