[package]
	name = "multisql"
	version = "0.1.2"
	authors = ["Kyran Gostelow <kyran@gostelow.me>", "Taehoon Moon <taehoon.moon@outlook.com>"]
	edition = "2021"
	description = "MultiSQL"
	license = "Apache-2.0"
	repository = "https://github.com/KyGost/multisql"
	readme = "README.md"
	keywords = ["database", "database-engine", "sql", "modular", "multi-threaded"]
	metadata.docs.rs.all-features = true

[features]
	default = [
		# Storages
		"sled-storage",
		"csv-storage",
		"sheet-storage",
		# Functionality
		"alter-table",
		"auto-increment",
		# Data
		"implicit_float_conversion",
	]

	# Storages
		sled-storage = ["sled", "bincode"]
		csv-storage = ["csv", "linecount"]
		sheet-storage = ["umya-spreadsheet"]

	# Functionality
		alter-table = []
		auto-increment = []

	# Data
		implicit_float_conversion = []


[dependencies]
	async-trait = "0.1.41"
	async-recursion = "0.3.1"
	boolinator = "2.4.0"
	futures = "0.3"
	serde = { version = "1.0.117", features = ["derive"] }
	sqlparser = { version = "0.16.0", features = ["serde"] }
	thiserror = "1.0.21"
	fstrings = "0.2.3"
	chrono = { version = "0.4.19", features = ["serde", "unstable-locales"] }
	concat-idents = "1.1.2"
	thousands = "0.2.0"
	fast-float = "0.2.0" # Unclear if these make any real difference
	lexical = "6.1.0"
	fastrand = "1.7.0"
	rayon = "1.5.1"
	serde_json = "1.0.0"
	uuid = { version = "0.8", features = ["serde", "v4"] }
	serde_yaml = "0.8.23"

	# OPTIONAL DEPENDENCIES
		# Storages
			# Sled
				bincode = { version = "1.3.1", optional = true }
				sled = { version = "0.34.7", optional = true }
			# CSV
				csv = { version = "1.1.6", optional = true }
				linecount = { version = "0.1.0", optional = true }
			# Sheet
				umya-spreadsheet = { version = "0.6.0", optional = true }

[dev-dependencies]
	tokio = { version = "0.3.3", features = ["macros", "rt"] }
	criterion = {version = "0.3.5", features = ["html_reports"] }

[[bench]]
	name = "bench"
	harness = false
